force-app/main/default/objects/clcommon__Reviewer__c/clcommon__Reviewer__c.object-meta.xml
<CustomObject>
    <label>Reviewer</label>
    <nameField>
        <displayFormat>Reviewer-{0000000}</displayFormat>
        <label>Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>