force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Approval_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Authority</label>
    <referenceTo>clcommon__Approval_Authority__c</referenceTo>
    <relationshipLabel>Reviewer</relationshipLabel>
    <relationshipName>Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>