force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Approval_Review_Group__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Approval_Review_Group__c</fullName>
    <label>Approval Review Group</label>
    <referenceTo>clcommon__Approval_Review_Group__c</referenceTo>
    <relationshipLabel>Review Group Member</relationshipLabel>
    <relationshipName>Review_Group_Member</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>