force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Completed_Date__c</fullName>
    <description>The completion date and time of the review.</description>
    <inlineHelpText>The completion date and time of the review.</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>