force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Conditional_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Conditional_Approval_Status__c</fullName>
    <description>Final status of conditional approval</description>
    <label>Conditional Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>