force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Max_Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Max_Approval_Limit__c</fullName>
    <description>Maximum approval limit of the user based on defined approval authority</description>
    <inlineHelpText>Maximum approval limit of the user based on defined approval authority</inlineHelpText>
    <label>Max Approval Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>