force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Min_Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Min_Approval_Limit__c</fullName>
    <description>Minimum approval limit of the user based on defined approval authority</description>
    <inlineHelpText>Minimum approval limit of the user based on defined approval authority</inlineHelpText>
    <label>Min Approval Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>