force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Review_Comments__c</fullName>
    <label>Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>