force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who updated the final review status.</description>
    <inlineHelpText>User who updated the final review status.</inlineHelpText>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>