force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Serial_Number__c</fullName>
    <description>The serial number defined for the reviewer in approval authority.</description>
    <inlineHelpText>The serial number defined for the reviewer in approval authority.</inlineHelpText>
    <label>Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>