force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Start_Date__c</fullName>
    <description>The start date and time of the review.</description>
    <inlineHelpText>The start date and time of the review.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>