force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clcommon__Review_Status</valueSetName>
    </valueSet>
</CustomField>