force-app/main/default/objects/clcommon__Reviewer__c/fields/clcommon__User__c.field-meta.xml
<CustomField>
    <fullName>clcommon__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver</relationshipName>
    <type>Lookup</type>
</CustomField>