force-app/main/default/objects/clcommon__Reviewer__c/fields/Maximum_Individual_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Individual_Limit__c</fullName>
    <formula>VALUE(clcommon__Approval_Authority__r.clcommon__Max_Individual_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Individual Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>