force-app/main/default/objects/clcommon__Reviewer__c/fields/Minimum_Individual_Limit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Individual_Limit__c</fullName>
    <formula>VALUE(clcommon__Approval_Authority__r.clcommon__Min_Individual_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Individual Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>